1.3.2-6 - xxxx-xx-xx
====================

 * In the case all else fails, try to resort to guess_content_type so
   that at least we don't get 'text/plain' when the file is in fact a
   binary file.
   [dreamcatcher]

1.3.2-5 - 2004-09-30
====================

 * nothing

1.3.2-4 - 2004-09-30
====================

 * nothing

1.3.2-3 - 2004-09-25
====================

 * nothing

1.3.2-2 - 2004-09-17
====================

 * nothing

1.3.2-1 - 2004-09-04
====================

 * Cleaned up major parts of PT by removing the python only implementation which
   was broken anyway
   [tiran]

1.3.1-1 - 2004-08-16
====================

 * Added text/x-html-safe mime type for new transformation
   [tiran]

 * Don't return acquisition wrapped mimetype items beause they may lead to
   memory leaks.
   [tiran]

1.3.0-3 - 2004-08-06
====================

 * Added text/wiki mime type
   [tiran]

 * Don't log redefine warning if the currrent and the new object are equal
   [tiran]

 * initialize() MTR on __setstate__ aka when the MTR is loaded from ZODB.
   [tiran]

1.3.0-2 - 2004-07-29
====================

 * Nothing changed